tests/baselines/reference/pathsValidation2.errors.txt
tests/cases/compiler/tsconfig.json(5,19): error TS5064: Substitution '1' for pattern '*' has incorrect type, expected 'string', got 'number'.


==== tests/cases/compiler/tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            "paths": {
                "*": [1]
                      ~
!!! error TS5064: Substitution '1' for pattern '*' has incorrect type, expected 'string', got 'number'.
            }
        }
    }
==== tests/cases/compiler/a.ts (0 errors) ====
    let x = 1;